--- a/frontPage/select.html
+++ b/frontPage/select.html
@@ -5,8 +5,8 @@
     <title>组件平台显示内容</title>
     <!--开发阶段引用jq-->
     <script type="text/javascript" src="//cdn.bootcss.com/jquery/1.10.1/jquery.min.js"></script>
-    <link type="text/css" rel="stylesheet" href="/frontPage/css/content.min.css?1" />
     <link type="text/css" rel="stylesheet" href="/js/plugin_modules/zr/css/zr.min.css"/>
+    <link type="text/css" rel="stylesheet" href="/frontPage/css/content.min.css?1"/>
 </head>
 <body>
 <article class="c-content">
@@ -51,27 +51,28 @@
             </div>
         </div>
         <div class="c-code-inner c-code-hide">
-    <!--默认样式-->
-    <select name="country" class="zr-select">
-        <option value="">请选择一个城市</option>
-        <option value="010">北京</option>
-        <option value="021">上海</option>
-        <option value="0571">杭州</option>
-    </select>
-    <!--禁用样式-->
-    <select name="country" class="zr-select" disabled="disabled">
-        <option value="">请选择一个城市</option>
-        <option value="010">北京</option>
-        <option value="021">上海</option>
-        <option value="0571">杭州</option>
-    </select>
+            <!--默认样式-->
+            <select name="country" class="zr-select">
+                <option value="">请选择一个城市</option>
+                <option value="010">北京</option>
+                <option value="021">上海</option>
+                <option value="0571">杭州</option>
+            </select>
+            <!--禁用样式-->
+            <select name="country" class="zr-select" disabled="disabled">
+                <option value="">请选择一个城市</option>
+                <option value="010">北京</option>
+                <option value="021">上海</option>
+                <option value="0571">杭州</option>
+            </select>
         </div>
         <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
     </section>
     <div class="c-block-50"></div>
     <section class="c-sub-title">
         <p>不同尺寸 <a href="#">#</a></p>
-        <span>定义了select选择器三种尺寸：大、中（默认）、小；高度分别为  <i class="c-block-inline">40px</i>   <i class="c-block-inline">32px</i>   <i class="c-block-inline">24px</i>；
+        <span>定义了select选择器三种尺寸：大、中（默认）、小；高度分别为  <i class="c-block-inline">40px</i>   <i class="c-block-inline">32px</i>   <i
+                class="c-block-inline">24px</i>；
         大尺寸和小尺寸需额外增加样式 <i class="c-block-inline">zr-select-lg</i> 和 <i class="c-block-inline">zr-select-sm</i>。</span>
     </section>
     <section class="c-code">
@@ -104,27 +105,27 @@
             </div>
         </div>
         <div class="c-code-inner c-code-hide">
-    <!--小尺寸 需额外增加样式“zr-select-sm”-->
-    <select name="country" class="zr-select zr-select-sm">
-        <option value="">请选择一个城市</option>
-        <option value="010">北京</option>
-        <option value="021">上海</option>
-        <option value="0571">杭州</option>
-    </select>
-    <!--默认尺寸-->
-    <select name="country" class="zr-select">
-        <option value="">请选择一个城市</option>
-        <option value="010">北京</option>
-        <option value="021">上海</option>
-        <option value="0571">杭州</option>
-    </select>
-    <!--大尺寸 需额外增加样式“zr-select-lg”-->
-    <select name="country" class="zr-select zr-select-lg">
-        <option value="">请选择一个城市</option>
-        <option value="010">北京</option>
-        <option value="021">上海</option>
-        <option value="0571">杭州</option>
-    </select>
+            <!--小尺寸 需额外增加样式“zr-select-sm”-->
+            <select name="country" class="zr-select zr-select-sm">
+                <option value="">请选择一个城市</option>
+                <option value="010">北京</option>
+                <option value="021">上海</option>
+                <option value="0571">杭州</option>
+            </select>
+            <!--默认尺寸-->
+            <select name="country" class="zr-select">
+                <option value="">请选择一个城市</option>
+                <option value="010">北京</option>
+                <option value="021">上海</option>
+                <option value="0571">杭州</option>
+            </select>
+            <!--大尺寸 需额外增加样式“zr-select-lg”-->
+            <select name="country" class="zr-select zr-select-lg">
+                <option value="">请选择一个城市</option>
+                <option value="010">北京</option>
+                <option value="021">上海</option>
+                <option value="0571">杭州</option>
+            </select>
         </div>
         <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
     </section>
@@ -146,11 +147,11 @@
             </div>
         </div>
         <div class="c-code-inner c-code-hide">
-    <select name="country" multiple="multiple" class="zr-select">
-        <option value="010">北京</option>
-        <option value="021">上海</option>
-        <option value="0571">杭州</option>
-    </select>
+            <select name="country" multiple="multiple" class="zr-select">
+                <option value="010">北京</option>
+                <option value="021">上海</option>
+                <option value="0571">杭州</option>
+            </select>
         </div>
         <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
     </section>
@@ -170,6 +171,20 @@
                     <option value="021" selected="selected">上海</option>
                     <option value="0571">杭州</option>
                 </select>
+
+                <!--<div class="zr-simulation zr-select-lg">-->
+                    <!--<div data-value="" class="zr-select-reception">-->
+                        <!--请选择一个城市-->
+                        <!--<i class="zricon-arrow-down "></i>-->
+                    <!--</div>-->
+                    <!--<dl class="zr-select-menu zr-select-hide">-->
+                        <!--<dd data-value="0">请选择一个城市</dd>-->
+                        <!--<dd data-value="1">北京</dd>-->
+                        <!--<dd data-value="2">上海</dd>-->
+                        <!--<dd data-value="3">杭州</dd>-->
+                    <!--</dl>-->
+                <!--</div>-->
+
             </div>
             <div style="width: 160px;display: inline-block">
                 <select name="country" multiple="multiple" class="zr-select">
@@ -177,22 +192,57 @@
                     <option value="021" selected="selected">上海</option>
                     <option value="0571" selected="selected">杭州</option>
                 </select>
+
+                <!--<div class="zr-simulation">-->
+                    <!--<div class="zr-select-reception zr-select-multiple">-->
+                        <!--<span>上海 <i class="zricon-close"></i></span>-->
+                        <!--<span>上海 <i class="zricon-close"></i></span>-->
+                        <!--<i class="zricon-arrow-down"></i>-->
+                    <!--</div>-->
+                    <!--<dl class="zr-select-menu zr-select-hide">-->
+                        <!--<dt data-value="" class="zr-select-checkbox-checked">-->
+                            <!--<span class="zr-select-checkbox-normal">-->
+                                <!--<span class="zr-select-checkbox-uncheck"></span>-->
+                            <!--</span>-->
+                            <!--<span>请选择一个城市</span>-->
+                        <!--</dt>-->
+                        <!--<dd data-value="1" class="zr-select-checkbox-checked">-->
+                            <!--<span class="zr-select-checkbox-normal">-->
+                                <!--<span></span>-->
+                            <!--</span>-->
+                            <!--<span>北京</span>-->
+                        <!--</dd>-->
+                        <!--<dd data-value="2">-->
+                            <!--<span class="zr-select-checkbox-normal">-->
+                                <!--<span></span>-->
+                            <!--</span>-->
+                            <!--<span>上海</span>-->
+                        <!--</dd>-->
+                        <!--<dd data-value="3">-->
+                            <!--<span class="zr-select-checkbox-normal">-->
+                                <!--<span></span>-->
+                            <!--</span>-->
+                            <!--<span>杭州</span>-->
+                        <!--</dd>-->
+                    <!--</dl>-->
+                <!--</div>-->
+
             </div>
         </div>
         <div class="c-code-inner c-code-hide">
-    <!--默认选中“上海”-->
-    <select name="country" class="zr-select">
-        <option value="">请选择一个城市</option>
-        <option value="010">北京</option>
-        <option value="021" selected="selected">上海</option>
-        <option value="0571">杭州</option>
-    </select>
-    <!--多选列表默认选中-->
-    <select name="country" multiple="multiple" class="zr-select">
-        <option value="010">北京</option>
-        <option value="021" selected="selected">上海</option>
-        <option value="0571" selected="selected">杭州</option>
-    </select>
+            <!--默认选中“上海”-->
+            <select name="country" class="zr-select">
+                <option value="">请选择一个城市</option>
+                <option value="010">北京</option>
+                <option value="021" selected="selected">上海</option>
+                <option value="0571">杭州</option>
+            </select>
+            <!--多选列表默认选中-->
+            <select name="country" multiple="multiple" class="zr-select">
+                <option value="010">北京</option>
+                <option value="021" selected="selected">上海</option>
+                <option value="0571" selected="selected">杭州</option>
+            </select>
         </div>
         <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
     </section>
@@ -246,69 +296,69 @@
             </div>
         </div>
         <div class="c-code-inner c-code-hide">
-    <!--改变select的disabled属性-->
-    <select name="country" class="zr-select" id="selectDom1">
-        <option value="">请选择一个城市</option>
-        <option value="010">北京</option>
-        <option value="021">上海</option>
-        <option value="0571">杭州</option>
-    </select>
-    <button type="button" class="zr-btn zr-btn-primary" id="changeDis">改变select的disabled属性</button>
-    <script type="text/javascript">
-        Zr.ready(function(){
-            Zr.use("jquery",function (zr,$) {
-                $("#changeDis").off("click").on("click",function () {
-                    document.getElementById("selectDom1").zrchange({
-                        eventFn:function () {
-                            $("#selectDom1").attr("disabled","disabled");
-                        }
+            <!--改变select的disabled属性-->
+            <select name="country" class="zr-select" id="selectDom1">
+                <option value="">请选择一个城市</option>
+                <option value="010">北京</option>
+                <option value="021">上海</option>
+                <option value="0571">杭州</option>
+            </select>
+            <button type="button" class="zr-btn zr-btn-primary" id="changeDis">改变select的disabled属性</button>
+            <script type="text/javascript">
+                Zr.ready(function () {
+                    Zr.use("jquery", function (zr, $) {
+                        $("#changeDis").off("click").on("click", function () {
+                            document.getElementById("selectDom1").zrchange({
+                                eventFn: function () {
+                                    $("#selectDom1").attr("disabled", "disabled");
+                                }
+                            })
+                        });
                     })
-                });
-            })
-        })
-    </script>
-    <!--改变select的value属性-->
-    <select name="country" class="zr-select" id="selectDom2">
-        <option value="">请选择一个城市</option>
-        <option value="010">北京</option>
-        <option value="021">上海</option>
-        <option value="0571">杭州</option>
-    </select>
-    <button type="button" class="zr-btn zr-btn-primary" id="changeVal">改变select的value属性</button>
-    <script type="text/javascript">
-        Zr.ready(function(){
-            Zr.use("jquery",function (zr,$) {
-                $("#changeVal").off("click").on("click",function () {
-                    document.getElementById("selectDom2").zrchange({
-                        eventFn:function () {
-	                        $("#selectDom2").val("010");
-                        }
+                })
+            </script>
+            <!--改变select的value属性-->
+            <select name="country" class="zr-select" id="selectDom2">
+                <option value="">请选择一个城市</option>
+                <option value="010">北京</option>
+                <option value="021">上海</option>
+                <option value="0571">杭州</option>
+            </select>
+            <button type="button" class="zr-btn zr-btn-primary" id="changeVal">改变select的value属性</button>
+            <script type="text/javascript">
+                Zr.ready(function () {
+                    Zr.use("jquery", function (zr, $) {
+                        $("#changeVal").off("click").on("click", function () {
+                            document.getElementById("selectDom2").zrchange({
+                                eventFn: function () {
+                                    $("#selectDom2").val("010");
+                                }
+                            })
+                        });
                     })
-                });
-            })
-        })
-    </script>
-    <!--删除select的option-->
-    <select name="country" class="zr-select" id="selectDom3">
-        <option value="">请选择一个城市</option>
-        <option value="010">北京</option>
-        <option value="021">上海</option>
-        <option value="0571">杭州</option>
-    </select>
-    <button type="button" class="zr-btn zr-btn-primary" id="deleteOpt">删除select的option</button>
-    <script type="text/javascript">
-        Zr.ready(function(){
-            Zr.use("jquery",function (zr,$) {
-                $("#deleteOpt").off("click").on("click",function () {
-                    document.getElementById("selectDom3").zrchange({
-                        eventFn:function () {
-	                        $("#selectDom3").find("option[value=010]").remove();
-                        }
+                })
+            </script>
+            <!--删除select的option-->
+            <select name="country" class="zr-select" id="selectDom3">
+                <option value="">请选择一个城市</option>
+                <option value="010">北京</option>
+                <option value="021">上海</option>
+                <option value="0571">杭州</option>
+            </select>
+            <button type="button" class="zr-btn zr-btn-primary" id="deleteOpt">删除select的option</button>
+            <script type="text/javascript">
+                Zr.ready(function () {
+                    Zr.use("jquery", function (zr, $) {
+                        $("#deleteOpt").off("click").on("click", function () {
+                            document.getElementById("selectDom3").zrchange({
+                                eventFn: function () {
+                                    $("#selectDom3").find("option[value=010]").remove();
+                                }
+                            })
+                        });
                     })
-                });
-            })
-        })
-    </script>
+                })
+            </script>
         </div>
         <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
     </section>
@@ -365,38 +415,38 @@
 <script type="text/javascript">
     Zr.config({
         baseUrl: "/js/plugin_modules/",
-        requestTime:true,
+        requestTime: true,
         module: {
             zr: {
                 path: './zr/dev_index'
             }
         }
     });
-    Zr.ready(function(){
-        Zr.use("./js/quickMenu","./js/code")
-	    Zr.use("jquery",function (zr,$) {
-		    $("#changeDis").off("click").on("click",function () {
-			    document.getElementById("selectDom1").zrchange({
-                    eventFn:function () {
-	                    $("#selectDom1").attr("disabled","disabled");
+    Zr.ready(function () {
+        Zr.use("./js/quickMenu", "./js/code")
+        Zr.use("jquery", function (zr, $) {
+            $("#changeDis").off("click").on("click", function () {
+                document.getElementById("selectDom1").zrchange({
+                    eventFn: function () {
+                        $("#selectDom1").attr("disabled", "disabled");
                     }
                 })
-		    });
-		    $("#changeVal").off("click").on("click",function () {
-			    document.getElementById("selectDom2").zrchange({
-				    eventFn:function () {
-					    $("#selectDom2").val("010");
-				    }
-			    })
-		    });
-		    $("#deleteOpt").off("click").on("click",function () {
-			    document.getElementById("selectDom3").zrchange({
-				    eventFn:function () {
-					    $("#selectDom3").find("option[value=010]").remove();
-				    }
-			    })
-		    })
-	    })
+            });
+            $("#changeVal").off("click").on("click", function () {
+                document.getElementById("selectDom2").zrchange({
+                    eventFn: function () {
+                        $("#selectDom2").val("010");
+                    }
+                })
+            });
+            $("#deleteOpt").off("click").on("click", function () {
+                document.getElementById("selectDom3").zrchange({
+                    eventFn: function () {
+                        $("#selectDom3").find("option[value=010]").remove();
+                    }
+                })
+            })
+        })
     })
 </script>
 </body>
